dataviz/css/style.css
html, body {
	height: 100%;
	width: 100%;
  overflow: hidden;
}



/**
 * MAP
 */



#map {
	position: absolute;
	width: 100%;
	height: 100%;
	box-shadow: 0 0 10px rgba(0,0,0,0.5);
}

.leaflet-top.leaflet-left {
	margin-top: 150px;
}

/* overriding nv.d3.css svg style */
.leaflet-overlay-pane svg {
  width: auto !important;
  height: auto !important;
}



/**
 * TYPOGRAPHY
 */



body {
  font-family: 'Quattrocento', Arial, Helvetica, sans-serif !important;
  font-style: normal;
  font-weight: 400;
  color: #EEEEEE;
  font-size: 16px;
}

h1 {
  font-family: 'Oswald', Arial, Helvetica, sans-serif !important;
  font-size: 3em;
}

h2 {
  font-family: 'Quattrocento', Arial, Helvetica, sans-serif !important;
  font-size: 2em;
}

h3 {
  font-family: 'Quattrocento', Arial, Helvetica, sans-serif !important;
  font-size: 1.5em;
}

p { 
  font-size: 1em;
}

.title {
  font-family: 'Oswald', Arial, Helvetica, sans-serif !important;
}



/**
 * HEADER
 */



#header {
  padding-left: 2%;
}

.map-tile-current, .map-tile-icon {
  display: inline-block;
}

.map-tile-icon .btn-cog {
  background-color: none;
  border: none;
  font-size: 20px;
  margin-bottom: 5px;
  padding: 5px 5px;
  color: #EEEEEE;
}

#map-tile-controls.well {
  border: none;
  float: none;
  background: rgba(5, 5, 5, 0.4);
  text-shadow: 0px 0px 4px black;
}



/**
 * FOOTER
 */



.footer {
  position: absolute;
  width: 100%;
  height: 8%;
  padding-left: 2%;
  bottom: 2%;
}

.footer > .col-xs-6, .col-sm-6, .col-md-2 {
  height: 5em;
  padding: 0;
}

.footer .actions {
  height: 100%;
	border: solid 1px rgba(187, 187, 187, 0.5);
	padding: 5px;
  background: rgba(5, 5, 5, 0.4);
  text-shadow: 0px 0px 4px black;
}

#holos-logo {
  position: absolute;
  bottom: 0;
  right: 10px;
  z-index: 1000;
}

.attribution {
  font-family: sans-serif;
  font-size: 12px;
  color: #0078A8;
}



/**
 * BOOTSTRAP COMPONENTS
 */



.tooltip-inner {
  font-size: 14px;
  color: rgb(0,0,0);
  font-family: sans-serif;
  margin: 5px;
}
.tooltip-arrow {
  margin: 5px;
}
.tooltip.top .tooltip-inner {
  background-color:#EEEEEE;
}
.tooltip.top .tooltip-arrow {
  border-top-color: #EEEEEE;
}
.tooltip.right .tooltip-inner {
  background-color:#EEEEEE;
}
.tooltip.right .tooltip-arrow {
  border-right-color: #EEEEEE;
}
.tooltip.bottom .tooltip-inner {
  background-color:#EEEEEE;
}
.tooltip.bottom .tooltip-arrow {
  border-bottom-color: #EEEEEE;
}  
.tooltip.left .tooltip-inner {
  background-color:#EEEEEE;
}
.tooltip.left .tooltip-arrow {
  border-left-color: #EEEEEE;
} 



/**
 * D3 COMPONENTS
 */


#year-slider .axis {
  fill: #EEEEEE;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}

#year-slider .axis .halo {
  stroke: #EEEEEE;
  stroke-width: 4px;
  stroke-linecap: round;
}

#year-slider .slider .handle path {
  stroke: #EEEEEE;
  stroke-width: 3px;
  stroke-linecap: round;
  pointer-events: none;
}

#year-slider .slider .handle text {
  fill: #EEEEEE;
  text-align: center;
  font-size: 16px;
}

/* Chart */
#d3-canvas {
  margin-right: auto;
  margin-left: auto;
  width: 80%;
  font-size: 14px;
  background-color: white;
}
.axis {
  shape-rendering: crispEdges;
}
 
.axis path, .axis line {
  fill: none;
  stroke-width: .5px;
}
 
.x.axis path {
  stroke: #000;
}
 
.x.axis line {
  stroke: #fff;
  stroke-opacity: .5;
}
 
.y.axis line {
  stroke: #ddd;
  stroke-width: 1px !important;
}
 
path.line {
  fill: none;
  stroke: #000;
  stroke-width: .5px;
}
 
rect.pane {
  cursor: move;
  fill: none;
  pointer-events: all;
}
 
line {
  stroke: #000;
  stroke-width: 1.px;
}
 
text {
  font-size: 10px;
}

